CHANGES.txt - 05/14/2003
------------------------

CHANGES IN CUPS V1.1.19

	- "lpq -P" would segfault instead of showing a usage
	  message (STR #94)
	- Fixed compiler warnings in pdftops filter (STR #96)


CHANGES IN CUPS V1.1.19rc5

	- Jobs with banner pages that were printed to implicit
	  classes would get double banner pages for each
	  file/banner in the job (STR #68)
	- The mime.convs file was missing the filter definition
	  for Windows BMP (image/x-bitmap) files (STR #85)
	- The scheduler allowed some READ-ONLY job attributes to
	  be set, which could cause the scheduler to fail on the
	  next restart (STR #82)
	- The lp and lpr commands did not report when the
	  scheduler was not responding; instead, the user would
	  incorrectly see a "no default destination" error (STR
	  #70)
	- cupsLangGet() could fail on OSX due to a corrupt
	  language preference (STR #78)
	- Added more checks for HTTP request timeouts.
	- The scheduler dropped the first non-alpha character
	  after an open brace when doing attribute substitutions
	  in banner pages (STR #77)
	- The scheduler child might send SIGUSR1 to the parent
	  before the signal handler was installed; this didn't
	  prevent the scheduler from starting but produced an
	  annoying error message (STR #45)


CHANGES IN CUPS V1.1.19rc4

	- The lp command did not accept "-" for printing from
	  the standard input as required by POSIX 1003.1 (STR
	  #59)
	- Added the job-originating-host-name information for
	  the page_log file documentation in the SAM (STR #31)
	- The German web interface templates did not use the
	  right paths for job operations (STR #54)
	- The scheduler would consume all available CPU if
	  started with a pending job in the queue (STR #35)
	- The polling daemon allocated an extra localization
	  buffer but did not free it, causing cups-polld to
	  eventually use all available memory (STR #40)


CHANGES IN CUPS V1.1.19rc3

	- The scheduler could get in an infinite loop cancelling