@@ -1,8 +1,9 @@
-CHANGES.txt - 05/14/2003
+CHANGES.txt - 05/15/2003
 ------------------------
 
 CHANGES IN CUPS V1.1.19
 
+	- cupsLangGet didn't use its language cache (STR #97)
 	- "lpq -P" would segfault instead of showing a usage
 	  message (STR #94)
 	- Fixed compiler warnings in pdftops filter (STR #96)
